tests/functional/lang/parse-fail-regression-20060610.err.exp
error: undefined variable 'gcc'
       at «stdin»:9:11:
            8| ({
            9|   inherit gcc;
             |           ^
           10| }).gcc
